--- a/src/app/_components/Layout/header/MobileHeader/mobileHeader.module.sass
+++ b/src/app/_components/Layout/header/MobileHeader/mobileHeader.module.sass
@@ -17,7 +17,7 @@
     border-radius: 3rem
     transition: height 1s ease
     overflow: hidden
-    z-index: 3
+    z-index: 10
     .m_headerWrapper
         width: 90%
         max-width: 500px
